Fixed static view

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,19 @@ node_modules
 /node_modules
 /dist
 /frontend/dist
+/frontend/json/
+/frontend/json/users.json
+/frontend/json/toys.json
+frontend/json/
+frontend/json/users.json
+frontend/json/toys.json
 /backend/dist
-/backend/img
 frontend/dist
+frontend/hashPassword.js
+/frontend/hashPassword.js
+/frontend/endpoints/
+/frontend/endpoints/Endpoints.jsx
+frontend/public/img/
 backend/dist
 /.pnp
 .pnp.js
