--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,12 @@ node_modules
 /node_modules
 /dist
 /frontend/dist
-/frontend/json/
-/frontend/json/users.json
-/frontend/json/toys.json
-frontend/json/
-frontend/json/users.json
-frontend/json/toys.json
+/frontend/src/json/
+/frontend/src/json/users.json
+/frontend/src/json/toys.json
+frontend/src/json/
+frontend/src/json/users.json
+frontend/src/json/toys.json
 /backend/dist
 frontend/dist
 frontend/hashPassword.js
